[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD elements/Death Screen/Death_screen.gd" type="Script" id=1]
[ext_resource path="res://HUD elements/Fonts/LazyDog.tres" type="DynamicFont" id=2]
[ext_resource path="res://HUD elements/Death Screen/Death_Screen.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "scroll"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="DeathSceen" type="Node2D"]
light_mask = 959

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -472.0
margin_top = -288.0
margin_right = -432.0
margin_bottom = -248.0
rect_scale = Vector2( 151.792, 151.792 )
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_right = -32.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = -48.0
margin_top = -56.0
margin_right = 40.0
margin_bottom = -16.0
rect_scale = Vector2( 4, 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake rate=5 level=5]You Died[/shake]"
text = "You Died"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/RichTextLabel"]
autoplay = "scroll"
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/scroll = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -48.0
margin_top = 16.0
margin_right = 9.0
margin_bottom = 60.0
rect_scale = Vector2( 1.7272, 1.7272 )
theme = ExtResource( 3 )
alignment = 1

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 57.0
margin_bottom = 20.0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 1, 0.85098, 0.345098, 1 )
custom_colors/font_color_hover = Color( 1, 0.85098, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.890196, 0.67451, 1 )
text = "Restart"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 57.0
margin_bottom = 35.0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.85098, 0.345098, 1 )
custom_colors/font_color_hover = Color( 1, 0.85098, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.890196, 0.67451, 1 )
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="mouse_entered" from="VBoxContainer/Restart" to="Control" method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Restart" to="Control" method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="Control" method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="Control" method="_on_Quit_pressed"]
